--- a/SeeSharpIndexer/SeeSharpIndexer.csproj
+++ b/SeeSharpIndexer/SeeSharpIndexer.csproj
@@ -6,6 +6,12 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+    <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
+    <PackageReference Include="PeterO.Cbor" Version="4.5.3" />
+  </ItemGroup>
 
 </Project>
